# CMakeCourse

./: README.md
module1/: addition.cpp  calculator  division.cpp  makefile  print_res.cpp
module2/: CMakeLists.txt  division.cpp  main.cpp  print_res.h
module3/: CMakeLists.txt
module3/mathlib/: CMakeLists.txt
module3/mathlib/include/mathlib/: addition.h
module4/: CMakeLists.txt
module5/: CMakeLists.txt
module6/: CMakeLists.txt  main.cpp
module6/mathlib/: CMakeLists.txt
module6/mathlib/include/mathlib/: division.h
module6/mathlib/src/: addition.cpp  division.cpp
module6/printlib/: CMakeLists.txt
module6/printlib/src/: print_res.cpp
module7/: CMakeLists.txt  main.cpp
module8/GTK_APP/: CMakeLists.txt  main.cpp
module8/OpenCV_APP/: CMakeLists.txt  main.cpp
